--- a/css/variables.css
+++ b/css/variables.css
@@ -1,3 +1,9 @@
 :root{
-  --color-primary: #ffff;
+  --color-primary:#ff702a;
+  --color-text-light:#fff;
+  --color-secundary:#1e1d2b;
+  --color-text-dark:#000;
+  --background-color:#ffefe8;
+  --color-menu-movile:#2c2b47;
+  --color-border: #087f5b;
 }
