style: :lipstick: Rename custom prop

--- a/css/variables.css
+++ b/css/variables.css
@@ -3,7 +3,7 @@
   --color-text-light:#fff;
   --color-secundary:#1e1d2b;
   --color-text-dark:#000;
-  --background-color:#ffefe8;
+  --item-background-color:#ffefe8;
   --color-menu-movile:#2c2b47;
   --color-border: #087f5b;
 }
