style: :lipstick: Fix typo

--- a/css/variables.css
+++ b/css/variables.css
@@ -4,6 +4,6 @@
   --color-secundary:#1e1d2b;
   --color-text-dark:#000;
   --item-background-color:#ffefe8;
-  --color-menu-movile:#2c2b47;
+  --color-menu-mobile:#2c2b47;
   --color-border: #087f5b;
 }
