--- a/css/variables.css
+++ b/css/variables.css
@@ -1,3 +1,14 @@
 :root{
-  --color-primary: #ffff;
+  --color-primary: #299D8F;
+  --color-shop: #E0FCFB;
+  --color-hover: #e0fcfba8;
+  --text-color: black;
+  --color-secundary:#E9C46A;
+  --color-triade: #E76F51;
 }
+
+@font-face {
+  font-family: "Space Grotesk", sans-serif;
+  src: url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap');
+}
+/* https://coolors.co/e0fcfb-299d8f-f3a361-e76f51-264653-e9c46a */
