--- a/css/style.css
+++ b/css/style.css
@@ -96,7 +96,7 @@ a{
     padding-left: .5em;
 }
 
-.product-grid {
+#product-grid {
     width: 100%;
     display: grid;
     gap:1.5em;
@@ -139,6 +139,12 @@ a{
     align-items: center;
 }
 
+#trash-ico:hover{
+    color: red;
+    cursor: pointer;
+    scale: 1.2;
+}
+
 /* #region fooButton */
 /* .info-foo button{
     text-align: center;
@@ -151,7 +157,7 @@ a{
     border-radius: 2em;
 } */
 
-.add-button {
+button {
     cursor: pointer;
     position: relative;
     padding:  .2em 2em;
@@ -167,7 +173,7 @@ a{
     overflow: hidden;
   }
   
-  .add-button::before {
+  button::before {
     content: '';
     position: absolute;
     inset: 0;
@@ -181,17 +187,17 @@ a{
     transition: all 0.6s cubic-bezier(0.23, 1, 0.320, 1);
   }
   
-  .add-button:hover::before {
+  button:hover::before {
     scale: 3;
   }
   
-  .add-button:hover {
+  button:hover {
     color: #212121;
     scale: 1.1;
     box-shadow: 0 0px 20px var(--color-primary);
   }
   
-  .add-button:active {
+  button:active {
     scale: 1;
   }
 
@@ -226,23 +232,70 @@ a{
     font-size: .7em;
 }
 
+/* #region carGrid */
+#car-grid {
+    width: 100%;
+    display: grid;
+    gap:1.5em;
+    grid-template-columns:100%;
+    grid-template-rows:  repeat(auto-fit, minmax(100px, 1fr));
+}
+
+.car-item{
+    display: flex;
+    background-color: var(--color-primary);
+    border-radius: 2em;
+    overflow: hidden;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 3em;
+    flex-wrap: wrap;
+}
+
+.car-img{
+    align-content: center;
+    width: 10%;
+    height: 100%;
+}
+
+.car-img img{
+   object-fit: contain;
+   width: 100%;
+}
+
+.car-item h6{
+    font-size: 1.2em;
+}
+
+.car-item p{
+    font-size: 1.1em;
+}
+
+.car-item i{
+    font-size: 3em;
+}
+
+/* #endregion carGrid */
+
 /* #region car */
-    .car-manager button{
-        text-transform:capitalize;
-        text-align: center;
-        cursor: pointer;
-        padding:  .2em .5em;
-        font-size: 0.8em;
-        font-weight: 500;
-        background-color: var(--color-secundary);
-        border: .5px solid var(--color-primary);
-        border-radius: 2em;
-    }    
 
     .car-manager{
+        background-color: var(--color-hover);
+        height: 10%;
         width: 100%;
         display: flex;
         justify-content: space-between;
+        align-items: center;
+        padding:0 2em ;
+    
+    }
+
+    #empty-car{
+      background-color: #ff6347;
+    }
+
+    #shop-car{
+        background-color: #ff6347;
     }
 
     .car-total{
