--- a/css/style.css
+++ b/css/style.css
@@ -160,7 +160,7 @@ a{
 button {
     cursor: pointer;
     position: relative;
-    padding:  .2em 2em;
+    padding:  .2em .2em;
     display: flex;
     justify-content: center;
     font-size: 0.8em;
