style: :lipstick: Add responsive to car

--- a/css/style.css
+++ b/css/style.css
@@ -100,7 +100,7 @@ a{
     width: 100%;
     display: grid;
     gap:1.5em;
-    grid-template-columns: repeat(auto-fill, minmax(198px, 1fr));;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));;
     grid-template-rows: auto;
 }
 
@@ -142,7 +142,6 @@ a{
 #trash-ico:hover{
     color: red;
     cursor: pointer;
-    scale: 1.2;
 }
 
 /* #region fooButton */
@@ -238,23 +237,28 @@ button {
     display: grid;
     gap:1.5em;
     grid-template-columns:100%;
-    grid-template-rows:  repeat(auto-fill, minmax(100px, 1fr));
+    grid-template-rows:  repeat(auto-fill, minmax(auto, 1fr));
+    
 }
 
 .car-item{
-    display: flex;
+    display: grid;
     background-color: var(--color-primary);
     border-radius: 2em;
     overflow: hidden;
-    align-items: center;
-    justify-content: space-between;
+    /* align-items: center;
+    justify-content: space-between; */
+    grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+    grid-template-rows: auto;
     padding: 0 3em;
     flex-wrap: wrap;
+    gap: 1em;
+    align-items: center;
 }
 
 .car-img{
     align-content: center;
-    width: 10%;
+    width: 100%;
     height: 100%;
     display: flex;
     align-items: center;
@@ -274,12 +278,14 @@ button {
 }
 
 .car-item i{
-    font-size: 3em;
+    font-size: 2em;
+    text-align: center;
 }
 
 #car-item-name{
     overflow: hidden;
-    inline-size: 200px;
+    inline-size: 120px;
+    text-overflow: clip;
 }
 /* #endregion carGrid */
 
@@ -321,5 +327,9 @@ button {
     .text-menu{
         display: none;
         opacity: 0;
+    }
+
+    #car-grid{
+        text-align: center;
     }
 }
